// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form field macros inputCurrency 1`] = `

<label class="ff-label"
       for="field-example"
>
  Amount
</label>
<div class="ff-currency ff-currency--constrained">
  <div class="ff-currency__pre">
    £
  </div>
  <input class="ff-currency__input"
         type="number"
         id="field-example"
         name="example"
         required
         aria-required="true"
  >
</div>

`;

exports[`form field macros inputText 1`] = `

<label class="ff-label"
       for="field-example"
>
  First name
</label>
<input class="ff-text"
       type="text"
       id="field-example"
       name="example"
       required
       aria-required="true"
       size="40"
>

`;
